Add additional context; re-separate assistant and user message ids; update node package versions; move model selection to sidebar; improve file navigation; add dark/light mode; improve automatic scrolling

--- a/sprouts/src/styles/globals.css
+++ b/sprouts/src/styles/globals.css
@@ -24,3 +24,15 @@ body {
 .markdown ol > li:first-child {
   margin-top: 1rem;
 }
+
+/* This is difficult for accessibility if ever used by not just me */
+::-webkit-scrollbar
+{
+  width: 5px;
+  height: 5px;;
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(0, 0, 0, 0.5);
+}
